# compilerForNeander

./: .gitignore  CMakeLists.txt  README.md  compilerForNeander.cbp  compilerForNeander.depend
include/: definitions.h  utils.h
resources/: CMakeLists.txt  input.c  output.asm
src/: main.c  utils.c
